Fix Flutter build command for cross-platform Vercel deployment
- Replace Windows-specific Flutter path (C:\flutter\bin\flutter.bat) with cross-platform 'flutter' command
- This fixes the deployment error: 'sh: line 1: C:flutterbinflutter.bat: command not found'
- Vercel runs on Linux, so Windows batch files and absolute paths won't work

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
-    "buildCommand": "C:\\flutter\\bin\\flutter.bat build web",
-    "outputDirectory": "build/web",
-    "framework": null,
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
-        }
-    ]
+  "buildCommand": "flutter build web",
+  "outputDirectory": "build/web",
+  "framework": null,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
