--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "flutter build web",
+  "installCommand": "git clone https://github.com/flutter/flutter.git --depth 1 -b stable ~/.flutter && ~/.flutter/bin/flutter config --no-analytics && ~/.flutter/bin/flutter pub get",
+  "buildCommand": "~/.flutter/bin/flutter build web",
   "outputDirectory": "build/web",
   "framework": null,
   "rewrites": [
