MediConnect V2: Computer Vision, Agentic AI, Blockchain storage, and Google Maps integration.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   uuid: ^4.2.2
   speech_to_text: ^6.6.0
   http: ^1.1.0
+  image_picker: ^1.0.4
+  google_maps_flutter: ^2.6.0
+  url_launcher: ^6.2.2
+  web3dart: ^2.7.3
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
